# genetic-discrepancy

./: .gitignore  .gitmodules  .travis.yml  Readme.md
data/: pts.prgn.N10000.d20
perftests/fitness_kern/: sourceme.sh
perftests/fitness_kern/kernels/: bl_dgemm_asm_kernel.c
perftests/naive_runspeed/: INFO  aggregate-data.py  build-bin-sb.sh  distribute-binaries.sh
perftests/naive_runspeed/knl-tests/pts.random.N50000.d50/: knl-skeleton.sh
src/: CMakeLists.txt
src/KNC-MIC/: Makefile.mic  star-discrepancy_mic.cpp
src/KNL-MIC/: star-discrepancy.cpp
src/accel/: accelmult.cpp  bl_dgemm_ref.c
src/base/: geneticutility.cpp  star-discrepancy-refact.cpp  star-discrepancy.cpp
src/cuda/: star-discrepancy_cu.cpp  star-discrepancy_cu.cu
src/include/: accelmult.h  bl_config.h  bl_dgemm.h  geneticutility.h  timer.h  transposemat.h
src/tests/: test_mmult.cpp
src/tests/mmult_test/: test_mmult.cpp
src/tests/simple_correctness/: test_population.sh  test_stdout.py  test_stdout.sh
src/tests/simple_correctness/input_data/: pts.random.N10000.d20
src/tests/simple_correctness/reference_population/: pts.prgn.N10000.d20.out  pts.prgn.N50000.d50.out
src/tests/simple_correctness/reference_stdout/: pts.halton.N10000.d20.stdout  pts.halton.N50000.d50.stdout  pts.prgn.N10000.d20.stdout  pts.random.N10000.d20.stdout
tests/blis_speed/: README  sourceme.sh
tests/blis_speed/dgemm/: bl_dgemm_ref.c
tests/blis_speed/kernels/: bl_dgemm_int_kernel.c
tests/blis_speed/test/: bl_dgemm_output-16278.txt  bl_dgemm_output-68-16277.txt  run_bl_dgemm.sh  tacc_run_bl_dgemm.sh  tacc_run_bl_dgemm_noHT.sh  tacc_run_bl_dgemm_onethread.sh  test_bl_dgemm.x
tests/fitness_kern/: README
tests/fitness_kern/kernels/: bl_dgemm_ukr.c
tests/fitness_kern/make.inc.files/: make.intel.inc
tests/fitness_kern/test/: tacc_run_bl_dgemm.sh
tests/mmult_unit/: dimtests.sh  run_mmult_tests.sh  sztests.sh
tests/naive_runspeed/: INFO  aggregate-data.py  build-bin-knl.sh
tests/naive_runspeed/knl-tests/: knl-skeleton.sh
tests/naive_runspeed/knl-tests/pts.random.N50000.d50/: knl-skeleton.sh
tests/naive_runspeed/sb-tests/: sb-skeleton.sh
tests/naive_runspeed/sb-tests/pts.halton.N10000.d20/: pts.halton.N10000.d20
tests/naive_runspeed/sb-tests/pts.random.N10000.d20/: sb-skeleton.sh
tests/naive_runspeed/sb-tests/pts.random.N50000.d50/: sb-skeleton.sh
tests/simple_correctness/: run_simple_correctness_test.sh  test_correctness.py  test_correctness.sh
tests/simple_correctness/reference_output/: pts.halton.N100000.d50.out  pts.halton.N200000.d50.out  pts.prgn.N100000.d50.out  pts.random.N100000.d50.out
tests/simple_correctness/reference_population/: pts.halton.N10000.d20.out  pts.halton.N50000.d50.out  pts.prgn.N200000.d50.out  pts.random.N10000.d20.out  pts.random.N200000.d50.out
tests/simple_correctness/reference_stdout/: pts.halton.N100000.d50.stdout  pts.halton.N200000.d50.stdout  pts.prgn.N100000.d50.stdout  pts.prgn.N200000.d50.stdout  pts.prgn.N50000.d50.stdout  pts.random.N100000.d50.stdout  pts.random.N200000.d50.stdout
